fixed horizontal scroll

--- a/src/components/HorizonalScroll/horizontalscroll.css
+++ b/src/components/HorizonalScroll/horizontalscroll.css
@@ -3,21 +3,20 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 100%;
 }
 
 .box .horizontal-scroll-wrapper {
   border: 0px none;
   height: 176px;
   position: relative;
-  width: 1100px;
+  width: fit-content;
+  overflow-x: scroll;
+  scroll-snap-type: mandatory;
 }
 
 .horizontal-scroll {
   height: 176px;
   left: 0;
-  position: fixed;
-  top: 0;
   width: 100%;
   display: flex;
   gap: 20px;
